refactor: landing page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,364 +1,7 @@
 ---
-import { getCollection } from "astro:content";
-import BlogPost from "../components/BlogPost.astro";
-import "../styles/global.css";
-const pageTitle = "Blog Page";
-import createSlug from "../lib/createSlug";
-const allPosts = await getCollection("blog");
+import BaseLayout from '../layouts/BaseLayout.astro';
+import Launch2025 from '../components/launch2025/index.jsx';
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/x-icon" href="/assets/favicon.ico" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <link
-      rel="apple-touch-icon"
-      sizes="57x57"
-      href="/assets/apple-icon-57x57.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="60x60"
-      href="/assets/apple-icon-60x60.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="72x72"
-      href="/assets/apple-icon-72x72.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="76x76"
-      href="/assets/apple-icon-76x76.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="114x114"
-      href="/assets/apple-icon-114x114.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="120x120"
-      href="/assets/apple-icon-120x120.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="144x144"
-      href="/assets/apple-icon-144x144.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="152x152"
-      href="/assets/apple-icon-152x152.png"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/assets/apple-icon-180x180.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="192x192"
-      href="/assets/android-icon-192x192.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/assets/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="96x96"
-      href="/assets/favicon-96x96.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/assets/favicon-16x16.png"
-    />
-    <script>
-      document.body.style.backgroundColor = `hsl(${Math.floor(Math.random() * 360)}, 100%, 18%)`;
-    </script>
-    <meta name="msapplication-TileColor" content="#ffffff" />
-    <meta
-      name="msapplication-TileImage"
-      content="/assets/ms-icon-144x144.png"
-    />
-    <meta name="theme-color" content="#ffffff" />
-    <title>joe.maddalone</title>
-  </head>
-  <body class="">
-    <header class="w-full flex items-center justify-center p-4">
-      <div class="flex flex-col items-center justify-between">
-        <h1 class="text-2xl font-bold font-mono text-white/30">
-          Hi! I'm Joe Maddalone
-        </h1>
-        <div class="flex items-center justify-between">
-          <a
-            target="_blank"
-            rel="noreferrer noopener nofollow"
-            href="https://www.linkedin.com/in/joemaddalone/"
-            class="text-white/80! text-md mr-4">linkedin</a
-          >
-          <a
-            target="_blank"
-            rel="noreferrer noopener nofollow"
-            href="https://github.com/joemaddalone"
-            class="text-white/80! text-md mr-4">github</a
-          >
-          <a
-            target="_blank"
-            rel="noreferrer noopener nofollow"
-            href="https://youtube.com/joemaddalone"
-            class="text-white/80! text-md mr-4">youtube</a
-          >
-          <a href="/resume" class="text-white/80! text-md">resume</a>
-        </div>
-      </div>
-    </header>
-    <div class="w-full">
-      <div
-        class="max-w-[800px] w-full mx-auto flex flex-col items-center justify-start p-4"
-      >
-        <div class="">
-          <h2 class="text-2xl font-bold font-mono text-white/30">/writes</h2>
-          <ul class="mt-2">
-            {
-              allPosts
-                .filter((post) => post.data.tags.includes("post"))
-                .sort((a, b) => a.data.date.getTime() - b.data.date.getTime())
-                .reverse()
-                .map((post) => (
-                  <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-                    <a
-                      class="hover:text-white/100! hover:underline!"
-                      href={`/${createSlug(post.data.title)}`}
-                    >
-                      <div class="text-white/80! text-md">
-                        {post.data.title}
-                      </div>
-                    </a>
-                    <div class="text-xs text-white/50!">
-                      {post.data.excerpt}
-                    </div>
-                    <div class="text-xs text-white/50!">
-                      {post.data.date.toLocaleDateString()}
-                    </div>
-                  </li>
-                ))
-            }
-          </ul>
-        </div>
-
-        <div class="mt-8 w-full">
-          <h2 class="text-2xl font-bold font-mono text-white/30">
-            /experiments
-          </h2>
-          <ul class="mt-2">
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="/experiments/html-svg-canvas/"
-              >
-                <div class="text-white/80! text-md">
-                  &rarr;html &rarr;svg &rarr;canvas
-                </div>
-              </a>
-              <div class="text-xs text-white/50!">
-                html &rarr;svg &rarr;canvas
-              </div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="/experiments/seam"
-              >
-                <div class="text-white/80! text-md">seam carving</div>
-              </a>
-              <div class="text-xs text-white/50!">image resizing algorithm</div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="/experiments/web-audio"
-              >
-                <div class="text-white/80! text-md">web audio</div>
-              </a>
-              <div class="text-xs text-white/50!">web audio code generator</div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="/experiments/canvas-exp"
-              >
-                <div class="text-white/80! text-md">canvas video grid</div>
-              </a>
-              <div class="text-xs text-white/50!">
-                canvas video grid experiment
-              </div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="/experiments/canvas-video-shape"
-              >
-                <div class="text-white/80! text-md">
-                  canvas video shape clipping
-                </div>
-              </a>
-              <div class="text-xs text-white/50!">
-                canvas video shape clipping experiment
-              </div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="/experiments/particles"
-              >
-                <div class="text-white/80! text-md">particles</div>
-              </a>
-              <div class="text-xs text-white/50!">particles experiment</div>
-            </li>
-          </ul>
-        </div>
-
-        <div class="mt-8 w-full">
-          <h2 class="text-2xl font-bold font-mono text-white/30">/projects</h2>
-          <ul class="mt-2">
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="https://joemaddalone.github.io/react-svg-path-docs/#/"
-              >
-                <div class="text-white/80! text-md">react-svg-path</div>
-              </a>
-              <div class="text-xs text-white/50!">react-svg-path library</div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="https://2019.reactloop.com/"
-              >
-                <div class="text-white/80! text-md">react loop</div>
-              </a>
-              <div class="text-xs text-white/50!">react loop conference</div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="https://joemaddalone.github.io/path/"
-              >
-                <div class="text-white/80! text-md">path</div>
-              </a>
-              <div class="text-xs text-white/50!">path library</div>
-            </li>
-            <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-              <a
-                class="hover:text-white/100! hover:underline!"
-                href="https://github.com/joemaddalone/vogon"
-              >
-                <div class="text-white/80! text-md">vogon</div>
-              </a>
-              <div class="text-xs text-white/50!">vogon application</div>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-    <!-- <div
-      class="max-w-[800px] w-full mx-auto flex flex-col items-center justify-start p-4"
-    >
-
-
-      <h2 class="text-2xl font-bold font-mono text-white/30">/experiments</h2>
-      <ul class="mt-2">
-        <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-          <a
-            class="hover:text-white/100! hover:underline!"
-            href="/experiments/seam"
-          >
-            <div class="text-white/80! text-md">seam carving</div>
-          </a>
-          <div class="text-xs text-white/50!">image resizing algorithm</div>
-        </li>
-        <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-          <a
-            class="hover:text-white/100! hover:underline!"
-            href="/experiments/web-audio"
-          >
-            <div class="text-white/80! text-md">web audio</div>
-          </a>
-          <div class="text-xs text-white/50!">web audio code generator</div>
-        </li>
-        <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-          <a
-            class="hover:text-white/100! hover:underline!"
-            href="/experiments/canvas-exp"
-          >
-            <div class="text-white/80! text-md">canvas video grid</div>
-          </a>
-          <div class="text-xs text-white/50!">canvas video grid experiment</div>
-        </li>
-        <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-          <a
-            class="hover:text-white/100! hover:underline!"
-            href="/experiments/canvas-video-shape"
-          >
-            <div class="text-white/80! text-md">
-              canvas video shape clipping
-            </div>
-          </a>
-          <div class="text-xs text-white/50!">
-            canvas video shape clipping experiment
-          </div>
-        </li>
-        <li class="mb-4! font-mono border-t border-white/20! pt-4!">
-          <a
-            class="hover:text-white/100! hover:underline!"
-            href="/experiments/particles"
-          >
-            <div class="text-white/80! text-md">particles</div>
-          </a>
-          <div class="text-xs text-white/50!">particles experiment</div>
-        </li>
-        <a href="/experiments/html-svg-canvas">
-          <div class="text-white/80! text-md">
-            &rarr;html &rarr;svg &rarr;canvas
-          </div>
-          <div class="text-xs text-white/50!">
-            &rarr;html &rarr;svg &rarr;canvas
-          </div>
-        </a>
-      </ul>
-
-
-    <div class="my-8">
-      <h2 class="text-2xl font-bold font-mono text-white/30">/projects</h2>
-      <div class="explist">
-        <a href="https://joemaddalone.github.io/react-svg-path-docs/#/">
-          <div class="label">react-svg-path</div>
-          <div class="counter fill-low"></div>
-        </a>
-        <a href="https://2019.reactloop.com/">
-          <div class="label">react loop</div>
-          <div class="counter fill-low"></div>
-        </a>
-        <a href="https://joemaddalone.github.io/path/">
-          <div class="label">path</div>
-          <div class="counter fill-low"></div>
-        </a>
-        <a href="https://joemaddalone.github.io/vogon/">
-          <div class="label">vogon</div>
-          <div class="counter fill-low"></div>
-        </a>
-      </div>
-    </div>
-    </div> -->
-  </body>
-</html>
+<BaseLayout includeHeader={false} includeFooter={false}>
+    <Launch2025 client:load />
+</BaseLayout>
