refactor: bye blog

--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/global.css";
 import BaseLayout from "../layouts/BaseLayout.astro";
-import data from "./resume.11tydata.json";
+import data from "./_resume.11tydata.json";
 const pageTitle = "Resume of Joe Maddalone";
 const work = data.resume.work.slice(0, 5);
 ---
